Experimentation with z-index of two fixed elements

--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ main {
 
     transition: all .5s ease-in-out;
 
+    z-index: 10;
     border: 35px solid #E1E1E1;
     box-shadow: 0px 0px 20px 5px #A9A9A9;
 }
@@ -247,4 +248,16 @@ footer {
 
 .dead {
     background-color: #454541;
+}
+
+#card1 {
+    position: fixed;
+    top: 250px;
+    left: 64%;
+    z-index: -10;
+}
+
+button {
+    height: 20px;
+    width: 20px;
 }
